feat: create flow to add vehicle to customer